--- a/client/client/package.json
+++ b/client/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.8.4",
     "@mui/styled-engine-sc": "^5.8.0",
     "@react-icons/all-files": "^4.1.0",
@@ -37,6 +38,7 @@
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
+    "three": "^0.143.0",
     "web-vitals": "^2.1.4",
     "words-to-numbers": "^1.5.1"
   },
