--- a/client/client/package.json
+++ b/client/client/package.json
@@ -17,13 +17,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.3",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.2.0",
+    "react-grid-system": "^8.1.6",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
