--- a/client/client/package.json
+++ b/client/client/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "material-ui-chip-input": "^1.1.0",
@@ -32,7 +33,7 @@
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-tag-input-component": "^1.0.7",
     "redux": "^4.2.0",
     "redux-core": "^0.1.1",
