--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-CONNECTION_URL = mongodb+srv://HamzaNemer:DhZJfFv3zpjq6JV@cluster0.rp89krz.mongodb.net/gamificationr?retryWrites=true&w=majority
+CONNECTION_URL = mongodb+srv://HamzaNemer:DhZJfFv3zpjq6JV@cluster0.rp89krz.mongodb.net/gamification?retryWrites=true&w=majority
