--- a/client/client/package.json
+++ b/client/client/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.34",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.8.4",
     "@mui/styled-engine-sc": "^5.8.0",
-    "@react-icons/all-files": "^4.1.0",
     "@react-spring/web": "^9.5.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -20,20 +19,22 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-grid-system": "^8.1.6",
-    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "react-tag-input-component": "^1.0.7",
     "redux": "^4.2.0",
     "redux-core": "^0.1.1",
@@ -42,7 +43,6 @@
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
-    "three": "^0.143.0",
     "web-vitals": "^2.1.4",
     "words-to-numbers": "^1.5.1"
   },
