--- a/client/client/package.json
+++ b/client/client/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tag-input-component": "^1.0.7",
+    "react-youtube": "^9.0.3",
     "redux": "^4.2.0",
     "redux-core": "^0.1.1",
     "redux-thunk": "^2.4.1",
