--- a/client/client/package.json
+++ b/client/client/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.6",
     "react-icons": "^4.4.0",
