--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-PORT = 5000
-CONNECTION_URL = mongodb+srv://HamzaNemer:DhZJfFv3zpjq6JV@cluster0.rp89krz.mongodb.net/gamification?retryWrites=true&w=majority
+PORT = 27017
+CONNECTION_URL = mongodb://127.0.0.1:27017/gamification
+
