--- a/client/client/package.json
+++ b/client/client/package.json
@@ -20,6 +20,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "framer-motion": "^7.2.1",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "material-ui-chip-input": "^1.1.0",
